--- a/claim.html
+++ b/claim.html
@@ -16,8 +16,10 @@
         <a class="top-nav-button" href="Documents\PAM_rules.pdf">Rules</a>
         <a class="top-nav-button" href="claim.html">Submit a Claim</a>
       </nav>
+      <div id="name_holder">Professional Arbitration & Mediation, LLC</div>
     </header>
-
+    <img class="painting" id="painting-1" src="Images\painting_1.png" alt="Decorative Image 1">
+    <img class="painting" id="painting-2" src="Images\painting_2.png" alt="Decorative Image 2">
     <footer id="footer">
       <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div>  <div>Attorney Advertising:  Past results do not guarantee future outcomes.</div>
     </footer>
