--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel = "icon" href = "" type = "image/x-icon"> <!--16-pixel square type ico-->
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,12 +14,30 @@
     <header id="header-color-block">
       <nav id=top-navigation>
         <a class="top-nav-button" href="index.html">Home</a>
-        <a class="top-nav-button" href="Documents\PAM_rules.pdf">Rules</a>
+        <a class="top-nav-button" href="rules.html">Rules</a>
         <a class="top-nav-button" href="claim.html">Submit a Claim</a>
       </nav>
       <div id="name_holder">Professional Arbitration & Mediation, LLC</div>
     </header>
-    <img id="swirls" src="Images\some_swirls.png" alt="Background Decoration"></img>
+    <div id="background-color">
+    <p id="front-page-motto" class="motto">We offer affordable, efficient, quality arbitration between attorneys and clients.</p>
+    <ul>
+    <li>$79/party for claims under $1,500</li>
+    <li>$99/party for claims between $1,501–$2,500</li>
+    <li>$129/party for claims between $2,501–$5,000</li>
+    <li>$159/party for claims between $5,001–$10,000</li>
+    <li>$219/party for claims between $10,001–$25,000</li>
+  </ul>
+
+
+<p>Each side only pays after both sides agree to use FairClaims, which means there is no downside to making a claim. In fact, if you pay after both sides agree to arbitrate and the other side doesn’t pay for the process in time, we will give you a refund if the arbitration doesn’t move forward.</p>
+
+<p>If both sides agree, one side can pay the fee for both parties. This sometimes happens between employers and employees, for example.</p>
+
+<p>At your arbitrator’s discretion, the winning party collects their arbitration fee from the losing party—more on that if/when you move forward with an arbitration.</p>
+
+</div>
+    
     <footer id="footer">
       <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div>  <div>Attorney Advertising:  Past results do not guarantee future outcomes.</div>
     </footer>
