--- a/rules.html
+++ b/rules.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <title>Submit a Claim</title>
+    <title>PAM's Rules</title>
   </head>
   <body>
     <header id="header-color-block">
@@ -18,10 +18,10 @@
       </nav>
       <div id="name_holder">Professional Arbitration & Mediation, LLC</div>
     </header>
-    <p class="motto">You can submit your claim now.</p>
-    <a class="button" href="mailto:admin@pamsadr.org">Mail a Claim</a>
-    <img class="painting" id="painting-1" src="Images\painting_1.png" alt="Decorative Image 1">
-    <img class="painting" id="painting-2" src="Images\painting_2.png" alt="Decorative Image 2">
+
+    <p class="motto">Streamlined rules allow efficient arbitration.</p>
+    <a class="button" href="Documents\PAM_rules.pdf">View Rules PDF</a>
+  <img id="swirls" src="Images\some_swirls.png" alt="Background Decoration"></img>
     <footer id="footer">
       <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div>  <div>Attorney Advertising:  Past results do not guarantee future outcomes.</div>
     </footer>
