still in rough draft

--- a/index.html
+++ b/index.html
@@ -19,25 +19,38 @@
       </nav>
       <div id="name_holder">Professional Arbitration & Mediation, LLC</div>
     </header>
-    <div id="background-color">
-    <p id="front-page-motto" class="motto">We offer affordable, efficient, quality arbitration between attorneys and clients.</p>
-    <ul>
+    <div class="background-color">
+      <p class="motto" style="text-align: center;"> SAMPLE PROFESSIONAL ARBITRATION & MEDIATION, LLC ARBITRATION CLAUSE - GENERAL</p>
+
+      <p>Notwithstanding the foregoing, any dispute, claim or controversy under $25,000 in value arising out of or relating to this agreement, or the breach thereof, shall be settled by arbitration administered by Professional Arbitration & Mediation, LLC (<a href="pamsadr.org" style="color: hsla(0, 0%, 92%, 1);">www.pamsadr.org</a>) in accordance with its Arbitration Rules & Procedures effective at the time a claim is made, and judgment on the award rendered by the arbitrator(s) may be entered in any court having jurisdiction thereof.</p>
+
+      <p>The Parties consent to electronic service of process, with service to be made to the following email addresses _____________________________ and _____________________________. The Parties agree that, in the event of confirmation and enforcement, the delinquent party will be responsible for any attorney, court or other fees associated with such action.</p>
+
+      <p>[The parties agree to split all Professional Arbitration & Mediation, LLC fees evenly.] -OR- [ {Paying Party Name} agrees to pay all Professional Arbitration & Mediation, LLC fees for both parties.] -OR- [The parties agree that {Party 1} will pay ___% and {Party 2} will pay ___% of all Professional Arbitration & Mediation, LLC fees for both parties.]</p>
+
+</div>
+
+<div class="background-color" style="margin-bottom: 8rem;">
+
+  <p class="motto">Costs for Disputes Under $25,000</p>
+
+  <ul>
     <li>$79/party for claims under $1,500</li>
     <li>$99/party for claims between $1,501–$2,500</li>
-    <li>$129/party for claims between $2,501–$5,000</li>
-    <li>$159/party for claims between $5,001–$10,000</li>
-    <li>$219/party for claims between $10,001–$25,000</li>
-  </ul>
+    <li> $129/party for claims between $2,501–$5,000</li>
+    <li> $159/party for claims between $5,001–$10,000 </li>
+    <li> $219/party for claims between $10,001–$25,000 </li>
+    <li>See our <a href="rules.html" style="color: white;">rules</a> for larger disputes.</li>
+</ul>
 
 
-<p>Each side only pays after both sides agree to use FairClaims, which means there is no downside to making a claim. In fact, if you pay after both sides agree to arbitrate and the other side doesn’t pay for the process in time, we will give you a refund if the arbitration doesn’t move forward.</p>
+<p>Each side only pays after both sides agree to use Professional Arbitration & Mediation, LLC, which means there is no downside to making a claim. In fact, if you pay after both sides agree to arbitrate and the other side doesn’t pay for the process in time, we will give you a refund if the arbitration doesn’t move forward.</p>
 
 <p>If both sides agree, one side can pay the fee for both parties. This sometimes happens between employers and employees, for example.</p>
 
 <p>At your arbitrator’s discretion, the winning party collects their arbitration fee from the losing party—more on that if/when you move forward with an arbitration.</p>
+</div >
 
-</div>
-    
     <footer id="footer">
       <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div>  <div>Attorney Advertising:  Past results do not guarantee future outcomes.</div>
     </footer>
