--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel = "icon" href = "" type = "image/x-icon"> <!--16-pixel square type ico-->
+    <link rel = "icon" href = "Images\pam.ico" type = "image/x-icon"> <!--16-pixel square type ico-->
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +19,8 @@
       </nav>
       <div id="name_holder">Professional Arbitration & Mediation, LLC</div>
     </header>
+
+      <p class="motto">Include an Arbitration Clause using our sample language.</p>
     <div class="background-color">
       <p class="motto" style="text-align: center;"> SAMPLE PROFESSIONAL ARBITRATION & MEDIATION, LLC ARBITRATION CLAUSE - GENERAL</p>
 
@@ -30,26 +32,7 @@
 
 </div>
 
-<div class="background-color" style="margin-bottom: 8rem;">
 
-  <p class="motto">Costs for Disputes Under $25,000</p>
-
-  <ul>
-    <li>$79/party for claims under $1,500</li>
-    <li>$99/party for claims between $1,501–$2,500</li>
-    <li> $129/party for claims between $2,501–$5,000</li>
-    <li> $159/party for claims between $5,001–$10,000 </li>
-    <li> $219/party for claims between $10,001–$25,000 </li>
-    <li>See our <a href="rules.html" style="color: white;">rules</a> for larger disputes.</li>
-</ul>
-
-
-<p>Each side only pays after both sides agree to use Professional Arbitration & Mediation, LLC, which means there is no downside to making a claim. In fact, if you pay after both sides agree to arbitrate and the other side doesn’t pay for the process in time, we will give you a refund if the arbitration doesn’t move forward.</p>
-
-<p>If both sides agree, one side can pay the fee for both parties. This sometimes happens between employers and employees, for example.</p>
-
-<p>At your arbitrator’s discretion, the winning party collects their arbitration fee from the losing party—more on that if/when you move forward with an arbitration.</p>
-</div >
 
     <footer id="footer">
       <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div>  <div>Attorney Advertising:  Past results do not guarantee future outcomes.</div>
