--- a/rules.html
+++ b/rules.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel = "icon" href = "Images\pam.ico" type = "image/x-icon"> <!--16-pixel square type ico-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -21,6 +22,27 @@
 
     <p class="motto">Streamlined rules allow efficient arbitration.</p>
     <a class="button" href="Documents\PAM_rules.pdf">View Rules PDF</a>
+
+    <div class="background-color" style="margin-bottom: 8rem;">
+
+      <p class="motto">Costs for Disputes Under $25,000</p>
+
+      <ul>
+        <li>$79/party for claims under $1,500</li>
+        <li>$99/party for claims between $1,501–$2,500</li>
+        <li> $129/party for claims between $2,501–$5,000</li>
+        <li> $159/party for claims between $5,001–$10,000 </li>
+        <li> $219/party for claims between $10,001–$25,000 </li>
+        <li>See our <a href=href="Documents\PAM_rules.pdf" style="color: hsla(0, 0%, 92%, 1);">rules</a> for larger disputes.</li>
+    </ul>
+
+
+    <p>Each side only pays after both sides agree to use Professional Arbitration & Mediation, LLC, which means there is no downside to making a claim. In fact, if you pay after both sides agree to arbitrate and the other side doesn’t pay for the process in time, we will give you a refund if the arbitration doesn’t move forward.</p>
+
+    <p>If both sides agree, one side can pay the fee for both parties. This sometimes happens between employers and employees, for example.</p>
+
+    <p>At your arbitrator’s discretion, the winning party collects their arbitration fee from the losing party—more on that if/when you move forward with an arbitration.</p>
+    </div >
   <img id="swirls" src="Images\some_swirls.png" alt="Background Decoration"></img>
     <footer id="footer">
       <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div>  <div>Attorney Advertising:  Past results do not guarantee future outcomes.</div>
