Added rudimentary mobile site with forced redirect.

--- a/rules.html
+++ b/rules.html
@@ -33,7 +33,7 @@
         <li> $129/party for claims between $2,501–$5,000</li>
         <li> $159/party for claims between $5,001–$10,000 </li>
         <li> $219/party for claims between $10,001–$25,000 </li>
-        <li>See our <a href=href="Documents\PAM_rules.pdf" style="color: hsla(0, 0%, 92%, 1);">rules</a> for larger disputes.</li>
+        <li>See our <a href="Documents\PAM_rules.pdf" style="color: hsla(0, 0%, 92%, 1);">rules</a> for larger disputes.</li>
     </ul>
 
 
