--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Professional Arbitration & Mediation, LLC</title>
   </head>
   <body>
+    <script src="scripts.js" type="text/javascript"></script> <!--mobile site redirect-->
     <header id="header-color-block">
       <nav id=top-navigation>
         <a class="top-nav-button" href="index.html">Home</a>
