--- a/index.html
+++ b/index.html
@@ -11,32 +11,12 @@
     <title>Professional Arbitration & Mediation, LLC</title>
   </head>
   <body>
-    <script src="scripts.js" type="text/javascript"></script> <!--mobile site redirect-->
-    <header id="header-color-block">
-      <nav id=top-navigation>
-        <a class="top-nav-button" href="index.html">Home</a>
-        <a class="top-nav-button" href="rules.html">Rules</a>
-        <a class="top-nav-button" href="claim.html">Submit a Claim</a>
-      </nav>
-      <div id="name_holder">Professional Arbitration & Mediation, LLC</div>
-    </header>
-
-      <p class="motto">Include an Arbitration Clause using our sample language.</p>
-    <div class="background-color">
-      <p class="motto" style="text-align: center;"> SAMPLE PROFESSIONAL ARBITRATION & MEDIATION, LLC ARBITRATION CLAUSE - GENERAL</p>
-
-      <p>Notwithstanding the foregoing, any dispute, claim or controversy under $25,000 in value arising out of or relating to this agreement, or the breach thereof, shall be settled by arbitration administered by Professional Arbitration & Mediation, LLC (<a href="pamsadr.org" style="color: hsla(0, 0%, 92%, 1);">www.pamsadr.org</a>) in accordance with its Arbitration Rules & Procedures effective at the time a claim is made, and judgment on the award rendered by the arbitrator(s) may be entered in any court having jurisdiction thereof.</p>
-
-      <p>The Parties consent to electronic service of process, with service to be made to the following email addresses _____________________________ and _____________________________. The Parties agree that, in the event of confirmation and enforcement, the delinquent party will be responsible for any attorney, court or other fees associated with such action.</p>
-
-      <p>[The parties agree to split all Professional Arbitration & Mediation, LLC fees evenly.] -OR- [ {Paying Party Name} agrees to pay all Professional Arbitration & Mediation, LLC fees for both parties.] -OR- [The parties agree that {Party 1} will pay ___% and {Party 2} will pay ___% of all Professional Arbitration & Mediation, LLC fees for both parties.]</p>
-
-</div>
-
-
-
-    <footer id="footer">
-      <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div>  <div>Attorney Advertising:  Past results do not guarantee future outcomes.</div>
-    </footer>
+    <a href="mailto:admin@pamsadr.org"><div id="allstuff">
+    <h1>Waiting on PAM?</h1>
+    <img alt="a woman looking through a window" title="Wondering Where PAM is?" src="waiting.jpg"/>
+    <p>You don't have to wait until we finish the website to start working with Professional Arbitration and Mediation, LLC.</p>
+    <p>Click or tap to email us with the details of your claim.</p>
+    <p>Or use the address admin@pamsadr.org.</p>
+  </div></a>
   </body>
 </html>
