--- a/claim.html
+++ b/claim.html
@@ -20,7 +20,7 @@
       <div id="name_holder">Professional Arbitration & Mediation, LLC</div>
     </header>
     <p class="motto">You can submit your claim now.</p>
-    <a class="button" href="mailto:admin@pamsadr.org">Mail a Claim</a>
+    <a class="button" href="mailto:admin@pamsadr.org" style="margin-bottom=40%;">Mail a Claim</a>
     <img class="painting" id="painting-1" src="Images\painting_1.png" alt="Decorative Image 1">
     <img class="painting" id="painting-2" src="Images\painting_2.png" alt="Decorative Image 2">
     <footer id="footer">
