Remove attorney advertising disclaimer.

--- a/claim.html
+++ b/claim.html
@@ -24,7 +24,7 @@
     <img class="painting" id="painting-1" src="Images\painting_1.png" alt="Decorative Image 1">
     <img class="painting" id="painting-2" src="Images\painting_2.png" alt="Decorative Image 2">
     <footer id="footer">
-      <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div>  <div>Attorney Advertising:  Past results do not guarantee future outcomes.</div>
+      <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div>  
     </footer>
   </body>
 </html>
