--- a/rules.html
+++ b/rules.html
@@ -26,7 +26,7 @@
 
   <img id="swirls" src="Images\some_swirls.png" alt="Background Decoration"></img>
     <footer id="footer">
-      <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div>  <div>Attorney Advertising:  Past results do not guarantee future outcomes.</div>
+      <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div>  
     </footer>
   </body>
 </html>
