--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
     <footer id="footer">
-      <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div>  <div>Attorney Advertising:  Past results do not guarantee future outcomes.</div>
+      <div>All items copyright Professional Arbitration & Mediation, LLC 2021.</div> 
     </footer>
   </body>
 </html>
